@@ -226,6 +226,23 @@ to use a very small fraction with the
 .I \-pm
 option, to avoid the ghosting effect of too few time samples.
 .TP
+.BI -pd \ dia
+Set the pixel depth-of-field aperture to a diameter of
+.I dia
+(in world coordinates).
+This will be used in conjunction with the view focal distance, indicated
+by the length of the view direction vector given in the
+.I \-vd
+option.
+It is not advisable to use this option in combination with the
+.I pdfblur(1)
+program, since one takes the place of the other.
+However, it may improve results with
+.I pdfblur
+to use a very small fraction with the
+.I \-pd
+option, to avoid the ghosting effect of too few samples.
+.TP
 .BI -dj \ frac
 Set the direct jittering to
 .I frac.
@@ -768,5 +785,5 @@ option.
 .SH AUTHOR
 Greg Ward
 .SH "SEE ALSO"
-getinfo(1), lookamb(1), oconv(1), pfilt(1), pinterp(1), pmblur(1),
+getinfo(1), lookamb(1), oconv(1), pdfblur(1), pfilt(1), pinterp(1), pmblur(1),
 printf(3), ra_rgbe(1), rad(1), rtrace(1), rvu(1)
