@@ -38,6 +38,7 @@ Npz:	view point z value
 Ndx:	view direction x value (normalized)
 Ndy:	view direction y value (normalized)
 Ndz:	view direction z value (normalized)
+Nd:	view focal distance
 Nux:	view up vector x value (normalized)
 Nuy:	view up vector y value (normalized)
 Nuz:	view up vector z value (normalized)
